Fixed font spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -85,7 +85,7 @@ body {
 }
 
 .overlay {
-  height: 39.5%;
+  height: 39.6%;
   width: 100%;
   top: 60%;
   display: flex;
